// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number min/max render with a unit type for currency 1`] = `
<styled.div
  data-test="unit"
  id="unit-number"
>
  £
</styled.div>
`;

exports[`Number min/max render with a unit type for percentage 1`] = `
<styled.div
  data-test="unit"
  id="unit-number"
  trailing={true}
>
  %
</styled.div>
`;

exports[`Number min/max render with a unit type for unit 1`] = `
<styled.div
  data-test="unit"
  id="unit-number"
  trailing={true}
>
  cm
</styled.div>
`;

exports[`Number should render correctly 1`] = `
<styled.div>
  <Styled(withChangeHandler(undefined))
    aria-labelledby="number"
    aria-live="assertive"
    data-test="number-input"
    default={null}
    id="number"
    max={10}
    min={-10}
    name="numberName"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    step={1}
    type="number"
    value={null}
  />
</styled.div>
`;
